# sharework_screw_detection

./: .gitignore  LICENSE  README.md
examples/countersunken_screws/: used_parameters.yaml
screw_detection/: CMakeLists.txt  Config.cmake.in
screw_detection/include/screw_detection/: detection.h  extractor_parameters.h  model.h  roi_extractor.h  training.h
screw_detection/src/screw_detection/: detection.cpp  model.cpp  roi_extractor.cpp  training.cpp
